--- a/src/elements/Button/styles.module.scss
+++ b/src/elements/Button/styles.module.scss
@@ -1,8 +1,8 @@
 .button {
-  @apply inline-flex h-[32px] w-[32px] items-center justify-center rounded-full bg-light-grayish-blue focus:bg-desaturated-dark-blue;
+  @apply p-[0.5em] rounded-full bg-light-grayish-blue focus:bg-desaturated-dark-blue;
 
   &:focus .buttonIcon {
-    @apply fill-light-grayish-blue ;
+    @apply fill-light-grayish-blue;
   }
 }
 
