--- a/src/index.scss
+++ b/src/index.scss
@@ -4,28 +4,29 @@
 
 @layer base {
   @font-face {
-    font-family: 'Manrope';
+    font-family: "Manrope";
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url(/fonts/Manrope-VariableFont_wght.ttf) format('truetype');
+    src: url(/fonts/Manrope-VariableFont_wght.ttf) format("truetype");
   }
 
   @font-face {
-    font-family: 'Manrope';
+    font-family: "Manrope";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url(/fonts/Manrope-VariableFont_wght.ttf) format('truetype');
+    src: url(/fonts/Manrope-VariableFont_wght.ttf) format("truetype");
   }
 
-  html,body,#root {
+  html,
+  body,
+  #root {
     height: 100%;
-	  width: 100%;
+    width: 100%;
     -ms-text-size-adjust: 100%;
-	  -moz-text-size-adjust: 100%;
-	  -webkit-text-size-adjust: 100%;
-    font-size: 10px;
-    font-family: 'Manrope', sans-serif;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    font-family: "Manrope", sans-serif;
   }
 }
