--- a/src/elements/Typography/styles.module.scss
+++ b/src/elements/Typography/styles.module.scss
@@ -6,20 +6,24 @@
   @apply text-sm;
 }
 
-.text_size_overline {
+.text_size_overline-1 {
   @apply text-xs;
+}
+
+.text_size_overline-2 {
+  @apply text-[0.79rem] tracking-[0.3rem];
 }
 
 .text_color_dark_grayish {
   @apply text-very-dark-grayish-blue;
 }
 
-.text_color_grayish {
-  @apply text-grayish-blue;
+.text_color_dark-blue {
+  @apply text-desaturated-dark-blue;
 }
 
-.text_color_light {
-  @apply text-light-grayish-blue;
+.text_color_grayish-blue {
+  @apply text-grayish-blue;
 }
 
 .text_weight_medium {
